--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lenis": "^1.1.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
